--- a/assets/sass/screen.scss
+++ b/assets/sass/screen.scss
@@ -906,6 +906,9 @@ footer {
       transform:scale(1.05);
     }
   }
+  .wpcf7-recaptcha {
+    margin-bottom:1.5rem;
+  }
   .icons {
       text-align: center;
   }
