--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9228,19 +9228,20 @@ Page designs
 */
 .page-template-page-boomtown .fixed-backdrop {
   background-color: black;
-  opacity: 0.6; }
+  opacity: 0.6;
+  background-image: url("../img/pages/boomtown-bg-mobile.jpg"); }
   @media screen and (min-width: 576px) {
     .page-template-page-boomtown .fixed-backdrop {
-      background-image: url("../img/pages/hoochlife-small.jpg"); } }
+      background-image: url("../img/pages/boomtown-bg-small.jpg"); } }
   @media screen and (min-width: 768px) {
     .page-template-page-boomtown .fixed-backdrop {
-      background-image: url("../img/pages/hoochlife-medium.jpg"); } }
+      background-image: url("../img/pages/boomtown-bg-medium.jpg"); } }
   @media screen and (min-width: 992px) {
     .page-template-page-boomtown .fixed-backdrop {
-      background-image: url("../img/pages/hoochlife-large.jpg"); } }
+      background-image: url("../img/pages/boomtown-bg.jpg"); } }
   @media screen and (min-width: 1200px) {
     .page-template-page-boomtown .fixed-backdrop {
       background-image: url("../img/pages/boomtown-bg.png"); } }
   @media screen and (min-width: 1921px) {
     .page-template-page-boomtown .fixed-backdrop {
-      background-image: url("../img/pages/hoochlife-full.jpg"); } }
+      background-image: url("../img/pages/boomtown-bg.jpg"); } }
