--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8974,95 +8974,6 @@ footer {
     color: white;
     font-size: 5rem; }
 
-#page {
-  position: relative;
-  z-index: 3;
-  padding: 3rem 0 1.5rem; }
-  @media screen and (min-width: 576px) {
-    #page {
-      margin: 0; } }
-  #page .banner {
-    color: white; }
-  #page .sub-banner {
-    color: #fedb00;
-    margin-bottom: 3rem; }
-    @media screen and (min-width: 576px) {
-      #page .sub-banner {
-        margin-bottom: 6rem; } }
-  #page input, #page label, #page .wpcf7-list-item-label {
-    text-transform: uppercase;
-    font-family: Futura-PT-Condensed, Arial Narrow, Trebuchet MS, Arial, sans-serif;
-    font-weight: bold;
-    font-size: 2rem; }
-    @media screen and (min-width: 576px) {
-      #page input, #page label, #page .wpcf7-list-item-label {
-        font-size: 2.5rem; } }
-  #page .wpcf7-list-item-label {
-    font-size: 0.667rem; }
-    @media screen and (min-width: 576px) {
-      #page .wpcf7-list-item-label {
-        font-size: 1rem; } }
-  #page input {
-    background-color: #fedb00;
-    border-color: transparent;
-    color: black;
-    transition: 0.5s all;
-    padding: 0;
-    outline: none !important;
-    flex-grow: 0.4;
-    text-align: center;
-    max-width: 100%;
-    width: 100%; }
-    @media screen and (min-width: 576px) {
-      #page input {
-        padding: 0 2rem 0 1rem;
-        text-align: left;
-        animation-direction: normal;
-        animation-duration: 2s;
-        animation-iteration-count: infinite;
-        animation-name: border-left-blink;
-        animation-timing-function: ease; } }
-    #page input::placeholder {
-      color: black;
-      transition: 0.5s all; }
-    #page input:hover {
-      border-left-color: transparent;
-      border-bottom-color: rgba(254, 219, 0, 0.4);
-      animation: none !important; }
-      #page input:hover::placeholder {
-        margin: initial 2rem;
-        color: rgba(254, 219, 0, 0.4); }
-    #page input:focus {
-      border-left-color: transparent;
-      border-bottom-color: #fedb00;
-      animation: none !important; }
-  #page input[type='checkbox'] {
-    width: 1rem;
-    height: 1rem; }
-  #page .wpcf7-checkbox span.wpcf7-list-item {
-    margin: 1.5rem 0; }
-  #page input[type='submit'] {
-    background-color: #fedb00;
-    color: black;
-    border: none;
-    margin: 0 auto;
-    width: auto;
-    cursor: pointer;
-    padding: 0 1rem;
-    transition: transform 0.3s ease-out;
-    -webkit-appearance: none;
-    appearance: none;
-    margin-bottom: 6rem; }
-    #page input[type='submit']:hover {
-      transform: scale(1.05); }
-  #page .wpcf7-recaptcha {
-    margin-bottom: 1.5rem; }
-  #page .icons {
-    text-align: center; }
-  #page i {
-    color: white;
-    font-size: 5rem; }
-
 .content {
   padding: 3rem 0 0; }
   @media screen and (min-width: 576px) {
@@ -9226,22 +9137,151 @@ body.page .content {
 Page designs
 
 */
+.page-template #singlepage {
+  position: relative;
+  z-index: 3;
+  padding: 3rem 0 1.5rem; }
+  @media screen and (min-width: 576px) {
+    .page-template #singlepage {
+      margin: 0; } }
+  .page-template #singlepage .banner {
+    color: white; }
+  .page-template #singlepage .sub-banner {
+    color: #fedb00;
+    margin-bottom: 3rem; }
+    @media screen and (min-width: 576px) {
+      .page-template #singlepage .sub-banner {
+        margin-bottom: 6rem; } }
+  .page-template #singlepage .copy {
+    padding: 0 15px;
+    color: #ffffff;
+    font-size: 1.25rem;
+    margin-top: -2rem;
+    margin-bottom: 2rem; }
+    @media screen and (min-width: 576px) {
+      .page-template #singlepage .copy {
+        margin-top: -3rem;
+        margin-bottom: 3rem; } }
+  .page-template #singlepage input, .page-template #singlepage label, .page-template #singlepage .wpcf7-list-item-label {
+    text-transform: uppercase;
+    font-family: Futura-PT-Condensed, Arial Narrow, Trebuchet MS, Arial, sans-serif;
+    font-weight: bold;
+    font-size: 2rem; }
+    @media screen and (min-width: 576px) {
+      .page-template #singlepage input, .page-template #singlepage label, .page-template #singlepage .wpcf7-list-item-label {
+        font-size: 2.5rem; } }
+  .page-template #singlepage .wpcf7-list-item-label {
+    font-size: 0.667rem; }
+    @media screen and (min-width: 576px) {
+      .page-template #singlepage .wpcf7-list-item-label {
+        font-size: 1rem; } }
+  .page-template #singlepage input {
+    background-color: #fedb00;
+    border-color: transparent;
+    color: black;
+    transition: 0.5s all;
+    padding: 0;
+    outline: none !important;
+    flex-grow: 0.4;
+    text-align: left;
+    max-width: 100%;
+    width: 100%; }
+    @media screen and (min-width: 576px) {
+      .page-template #singlepage input {
+        padding: 0 2rem 0 1rem;
+        animation-direction: normal;
+        animation-duration: 2s;
+        animation-iteration-count: infinite;
+        animation-name: border-left-blink;
+        animation-timing-function: ease; } }
+    .page-template #singlepage input::placeholder {
+      color: black;
+      transition: 0.5s all; }
+    .page-template #singlepage input:hover {
+      border-left-color: transparent;
+      border-bottom-color: rgba(254, 219, 0, 0.4);
+      animation: none !important; }
+      .page-template #singlepage input:hover::placeholder {
+        margin: initial 2rem;
+        color: rgba(254, 219, 0, 0.4); }
+    .page-template #singlepage input:focus {
+      border-left-color: transparent;
+      border-bottom-color: #fedb00;
+      animation: none !important; }
+  .page-template #singlepage input[type='checkbox'] {
+    width: 1rem;
+    height: 1rem; }
+  .page-template #singlepage .wpcf7-checkbox span.wpcf7-list-item {
+    margin: 1.5rem 0; }
+  .page-template #singlepage input[type='submit'] {
+    background-color: #fedb00;
+    color: black;
+    border: none;
+    margin: 0 auto;
+    width: auto;
+    cursor: pointer;
+    padding: 0 1rem;
+    transition: transform 0.3s ease-out;
+    -webkit-appearance: none;
+    appearance: none;
+    text-align: center;
+    display: block; }
+    @media screen and (min-width: 576px) {
+      .page-template #singlepage input[type='submit'] {
+        float: right;
+        clear: both;
+        margin-bottom: 6rem; } }
+    .page-template #singlepage input[type='submit']:hover {
+      transform: scale(1.05); }
+  .page-template #singlepage .wpcf7-checkbox {
+    float: right; }
+  .page-template #singlepage .wpcf7-recaptcha {
+    margin-bottom: 1.5rem;
+    text-align: center; }
+    @media screen and (min-width: 576px) {
+      .page-template #singlepage .wpcf7-recaptcha {
+        float: right;
+        clear: both; } }
+    .page-template #singlepage .wpcf7-recaptcha > div {
+      margin: 0 auto; }
+      @media screen and (min-width: 576px) {
+        .page-template #singlepage .wpcf7-recaptcha > div {
+          margin: 0; } }
+  .page-template #singlepage .icons {
+    text-align: center; }
+  .page-template #singlepage i {
+    color: white;
+    font-size: 5rem; }
+
+.page-template .links {
+  display: flex;
+  justify-content: space-around; }
+
+.page-template #hoochlife {
+  background-color: #fedb00; }
+  .page-template #hoochlife .sub-banner {
+    color: black; }
+  .page-template #hoochlife .row:last-of-type {
+    margin-bottom: 0; }
+    .page-template #hoochlife .row:last-of-type .col-12:last-of-type {
+      opacity: 0; }
+
 .page-template-page-boomtown .fixed-backdrop {
   background-color: black;
-  opacity: 0.6;
-  background-image: url("../img/pages/boomtown-bg-mobile.jpg"); }
+  opacity: 0.4;
+  background-image: url("../img/pages/boomtown-bg-mobile.png"); }
   @media screen and (min-width: 576px) {
     .page-template-page-boomtown .fixed-backdrop {
-      background-image: url("../img/pages/boomtown-bg-small.jpg"); } }
+      background-image: url("../img/pages/boomtown-bg-small.png"); } }
   @media screen and (min-width: 768px) {
     .page-template-page-boomtown .fixed-backdrop {
-      background-image: url("../img/pages/boomtown-bg-medium.jpg"); } }
+      background-image: url("../img/pages/boomtown-bg-medium.png"); } }
   @media screen and (min-width: 992px) {
     .page-template-page-boomtown .fixed-backdrop {
-      background-image: url("../img/pages/boomtown-bg.jpg"); } }
+      background-image: url("../img/pages/boomtown-bg.png"); } }
   @media screen and (min-width: 1200px) {
     .page-template-page-boomtown .fixed-backdrop {
       background-image: url("../img/pages/boomtown-bg.png"); } }
   @media screen and (min-width: 1921px) {
     .page-template-page-boomtown .fixed-backdrop {
-      background-image: url("../img/pages/boomtown-bg.jpg"); } }
+      background-image: url("../img/pages/boomtown-bg.png"); } }
