--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9269,19 +9269,19 @@ Page designs
 .page-template-page-boomtown .fixed-backdrop {
   background-color: black;
   opacity: 0.4;
-  background-image: url("../img/pages/boomtown-bg-mobile.jpg"); }
+  background-image: url("../img/pages/boomtown-bg2-mobile.jpg"); }
   @media screen and (min-width: 576px) {
     .page-template-page-boomtown .fixed-backdrop {
-      background-image: url("../img/pages/boomtown-bg-small.jpg"); } }
+      background-image: url("../img/pages/boomtown-bg2-small.jpg"); } }
   @media screen and (min-width: 768px) {
     .page-template-page-boomtown .fixed-backdrop {
-      background-image: url("../img/pages/boomtown-bg-medium.jpg"); } }
+      background-image: url("../img/pages/boomtown-bg2-medium.jpg"); } }
   @media screen and (min-width: 992px) {
     .page-template-page-boomtown .fixed-backdrop {
-      background-image: url("../img/pages/boomtown-bg.jpg"); } }
+      background-image: url("../img/pages/boomtown-bg2-large.jpg"); } }
   @media screen and (min-width: 1200px) {
     .page-template-page-boomtown .fixed-backdrop {
-      background-image: url("../img/pages/boomtown-bg.jpg"); } }
+      background-image: url("../img/pages/boomtown-bg2.jpg"); } }
   @media screen and (min-width: 1921px) {
     .page-template-page-boomtown .fixed-backdrop {
-      background-image: url("../img/pages/boomtown-bg.jpg"); } }
+      background-image: url("../img/pages/boomtown-bg2.jpg"); } }
