--- a/assets/sass/screen.scss
+++ b/assets/sass/screen.scss
@@ -1,6 +1,7 @@
 @import "bootstrap.scss";
 @import "system.scss";
 @import "core.scss";
+
 wbr:after { content: "\00200B"; }
 
 //This block sets up all elements for loading and animating, post-JS test
@@ -57,6 +58,7 @@ form {
   margin:0;
   line-height:1;
   word-wrap:break-word;
+  letter-spacing:-0.04em;
   @media #{$small} {
     font-size:10rem;
   }
@@ -235,10 +237,10 @@ nav {
   display:block;
   z-index:5;
   background-color:rgba(0,0,0,1);
-  height:30vh;
+  padding:0;
   @media #{$small} {
     display:block;
-    height:100vh;
+    height:calc(100vh - 4.5rem);
     padding:0;
     background-color:rgba(255,255,255,.8);
   }
@@ -272,6 +274,7 @@ nav {
   position: relative;
   z-index:3;
   color:black;
+  background-color:$yellow;
   .fixed-backdrop {
     background-color:$yellow;
     @media #{$medium} {
@@ -306,17 +309,26 @@ nav {
   }
   .row {
     margin-bottom:1.25rem;
+    position: relative;
     &:last-of-type {
       text-align: center;
     }
     @media #{$small} {
       margin-bottom:0;
-      &.lede {
+      &:nth-of-type(2) {
         margin-bottom:2.5rem;
       }
       &:last-of-type {
         margin:6rem 0;
       }
+    }
+  }
+  .col-lg-7 {
+    padding-top:1.25rem;
+  }
+  @media #{$large} {
+    .col-lg-7 {
+      padding-top:0rem;
     }
   }
   .banner {
@@ -327,17 +339,50 @@ nav {
   }
   p:not(.sub-banner) {
     font-size:1.25rem;
-    margin-bottom:0;
   }
   p.banner {
     display: block;
     font-size: 6rem;
   }
+  .lede {
+    font-family:$header-font;
+    font-weight:bold;
+    text-transform:uppercase;
+  }
+  @media #{$medium} {
+    .image {
+      float:right;
+      position: absolute;
+      right:0;
+      top:0;
+    }
+  }
   .tenpack, .social {
-    max-width:100%;
-    padding:1.25rem 0;
+    width:100%;
+    padding:0;
+  }
+  .hoochlife_tag {
+    margin: 0 auto;
+    display: block;
+  }
+  .textrow {
+    .col-md-7 {
+      order:1;
+    }
+    .col-md-5 {
+      order:2;
+    }
+    .col-lg-7 {
+      order:3;
+    }
+  }
+  .socialrow {
+    .col-md-7 {
+      margin-bottom:1.25rem;
+    }
   }
   i {
+    font-size:4rem;
     &:before {
       margin:0;
       opacity:1;
@@ -809,7 +854,7 @@ footer {
   }
   i {
     color: white;
-    font-size:5rem;
+    font-size:4rem;
   }
 }
 
@@ -934,33 +979,41 @@ body.page {
 //SVGs
 #hoochlife_intro {
   text-align: center;
+  width: 100%;
+  height: 100%;
   @media #{$small} {
     position: absolute;
     text-align: initial;
-    border: calc(50vw - 35vh) solid black;
-    border-top-width: calc(15vh - 4.75rem);
-    border-bottom-width: calc(15vh + 4.75rem);
-    width: auto;
-    height: auto;
+    border: none;
+    width: 100%;
+    height: 100%;
     top:0;
     left:0;
     overflow: hidden;
     box-sizing:content-box;
   }
-  svg {
-    height:30vh;
-    width:30vh;
+  .click_block {
+    height:100%;
+    width:100%;
+    position: absolute;
+    top:0;
+    left:0;
+    right:0;
+    bottom:0;
+    z-index:5;
+  }
+  iframe {
+    width:100%;
     background-color: white;
+    z-index:4;
+    height: calc(100vw * 0.55625);
     @media #{$small} {
       display:block;
       fill: rgba(0,0,0,1);
-      height: 70vh;
-      width: 70vh;
-      margin: 5px 0;
-      background-color: transparent;
-      rect {
-        transform: translate(0);
-      }
+      min-height:100%;
+      width: 100%;
+      margin: 0;
+      background-color: black;
     }
   }
 }
@@ -1000,12 +1053,12 @@ body.page {
     min-width:100%;
     position:absolute;
     top:0;
-    left:50%;
-    transform:translateX(-50%) scale(1.1)
+    left:50vw;
+    transform: translateX(-50%) translateY(-10%)scale(1.3);
   }
   path {
     fill-opacity: 0;
-    stroke-width: 15;
+    stroke-width: 2;
     transition: all 1s;
     transform:translate3d(0,0,0);
   }
@@ -1176,21 +1229,21 @@ Page designs
   .fixed-backdrop {
     background-color:$black;
     opacity:0.4;
-    background-image:url('../img/pages/boomtown-bg-mobile.jpg');
+    background-image:url('../img/pages/boomtown-bg2-mobile.jpg');
     @media #{$small} {
-      background-image:url('../img/pages/boomtown-bg-small.jpg');
+      background-image:url('../img/pages/boomtown-bg2-small.jpg');
     }
     @media #{$medium} {
-      background-image:url('../img/pages/boomtown-bg-medium.jpg');
+      background-image:url('../img/pages/boomtown-bg2-medium.jpg');
     }
     @media #{$large} {
-      background-image:url('../img/pages/boomtown-bg.jpg');
+      background-image:url('../img/pages/boomtown-bg2-large.jpg');
     }
     @media #{$extra-large} {
-      background-image:url('../img/pages/boomtown-bg.jpg');
+      background-image:url('../img/pages/boomtown-bg2.jpg');
     }
     @media #{$full} {
-      background-image:url('../img/pages/boomtown-bg.jpg');
+      background-image:url('../img/pages/boomtown-bg2.jpg');
     }
   }
 }
